src/snapshots/scooter_hx__snapshot_tests__multiselect_primary_bottom.snap
---
source: src/snapshot_tests.rs
expression: snapshot
---
canvas: 160x45
00 |  ┌─Search text──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  |
01 |  │alpha                                                                                                                                                     │  |
02 |  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  |
03 |  ┌─Replace text─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  |
04 |  │                                                                                                                                                          │  |
05 |  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  |
06 |                                                                                                                                                                |
07 |  Results: 4 [Search complete]                                                                                                            [Time taken: TIME]  |
08 |                                                                                                                                                                |
09 |  [x] fixture.txt:1                                          (1)   alpha 1                                                                                      |
10 |  [x] fixture.txt:2                                          (2)   alpha 2                                                                                      |
11 |  [x] fixture.txt:3                                          (3) - alpha 3                                                                                      |
12 |  [x] fixture.txt:4                                          (4) +  3                                                                                           |
13 |                                                                   alpha 4                                                                                      |
14 |                                                                                                                                                                |
15 |                                                                                                                                                                |
16 |                                                                                                                                                                |
17 |                                                                                                                                                                |
18 |                                                                                                                                                                |
19 |                                                                                                                                                                |
20 |                                                                                                                                                                |
21 |                                                                                                                                                                |
22 |                                                                                                                                                                |
23 |                                                                                                                                                                |
24 |                                                                                                                                                                |
25 |                                                                                                                                                                |
26 |                                                                                                                                                                |
27 |                                                                                                                                                                |
28 |                                                                                                                                                                |
29 |                                                                                                                                                                |
30 |                                                                                                                                                                |
31 |                                                                                                                                                                |
32 |                                                                                                                                                                |
33 |                                                                                                                                                                |
34 |                                                                                                                                                                |
35 |                                                                                                                                                                |
36 |                                                                                                                                                                |
37 |                                                                                                                                                                |
38 |                                                                                                                                                                |
39 |                                                                                                                                                                |
40 |                                                                                                                                                                |
41 |                                                                                                                                                                |
42 |                                                                                                                                                                |
43 |                                                                                                                                                                |
44 |                               <space> toggle / <esc> back to search fields / <enter> replace selected / <C-h> help / <C-c> quit                                |
tags:
00: 2-158 text
01: 2-8 text | 157-158 text
02: 2-158 text
03: 2-158 text
04: 2-3 text | 157-158 text
05: 2-158 text
07: 2-12 text | 12-30 diff-added | 138-158 diff-added
09: 2-64 selection-secondary | 65-74 text | 74-158 preview
10: 2-64 selection-secondary | 65-74 text | 74-158 preview
11: 2-64 selection | 65-67 diff-removed | 67-72 diff-removed-emph | 72-74 diff-removed | 74-158 preview
12: 2-6 info | 6-17 text | 17-19 info | 60-64 info | 65-69 diff-added | 69-158 preview
13: 65-74 text | 74-158 preview
14: 65-158 preview
15: 65-158 preview
16: 65-158 preview
17: 65-158 preview
18: 65-158 preview
19: 65-158 preview
20: 65-158 preview
21: 65-158 preview
22: 65-158 preview
23: 65-158 preview
24: 65-158 preview
25: 65-158 preview
26: 65-158 preview
27: 65-158 preview
28: 65-158 preview
29: 65-158 preview
30: 65-158 preview
31: 65-158 preview
32: 65-158 preview
33: 65-158 preview
34: 65-158 preview
35: 65-158 preview
36: 65-158 preview
37: 65-158 preview
38: 65-158 preview
39: 65-158 preview
40: 65-158 preview
41: 65-158 preview
42: 65-158 preview
43: 65-158 preview
44: 31-128 info
