src/snapshots/scooter_hx__snapshot_tests__preview_file_changed_guard.snap
---
source: src/snapshot_tests.rs
expression: snapshot
---
canvas: 120x40
00 |      ┌─Search text──────────────────────────────────────────────────────────────────────────────────────────────┐      |
01 |      │alpha                                                                                                     │      |
02 |      └──────────────────────────────────────────────────────────────────────────────────────────────────────────┘      |
03 |      ┌─Replace text─────────────────────────────────────────────────────────────────────────────────────────────┐      |
04 |      │                                                                                                          │      |
05 |      └──────────────────────────────────────────────────────────────────────────────────────────────────────────┘      |
06 |                                                                                                                        |
07 |      Results: 1 [Search complete]                                                            [Time taken: TIME]      |
08 |                                                                                                                        |
09 |      [x] fixture.txt:1                                                                                        (1)      |
10 |                                                                                                                        |
11 |                                                                                                                        |
12 |                                                                                                                        |
13 |                                                                                                                        |
14 |                                                                                                                        |
15 |      Error generating preview: File content has changed                                                                |
16 |                                                                                                                        |
17 |                                                                                                                        |
18 |                                                                                                                        |
19 |                                                                                                                        |
20 |                                                                                                                        |
21 |                                                                                                                        |
22 |                                                                                                                        |
23 |                                                                                                                        |
24 |                                                                                                                        |
25 |                                                                                                                        |
26 |                                                                                                                        |
27 |                                                                                                                        |
28 |                                                                                                                        |
29 |                                                                                                                        |
30 |                                                                                                                        |
31 |                                                                                                                        |
32 |                                                                                                                        |
33 |                                                                                                                        |
34 |                                                                                                                        |
35 |                                                                                                                        |
36 |                                                                                                                        |
37 |                                                                                                                        |
38 |                                                                                                                        |
39 |           <space> toggle / <esc> back to search fields / <enter> replace selected / <C-h> help / <C-c> quit            |
tags:
00: 6-114 text
01: 6-12 text | 113-114 text
02: 6-114 text
03: 6-114 text
04: 6-7 text | 113-114 text
05: 6-114 text
07: 6-16 text | 16-34 diff-added | 94-114 diff-added
09: 6-114 selection
15: 6-56 error
39: 11-108 info
