src/snapshots/scooter_hx__snapshot_tests__preview_multiline_diff.snap
---
source: src/snapshot_tests.rs
expression: snapshot
---
canvas: 120x40
00 |      ┌─Search text──────────────────────────────────────────────────────────────────────────────────────────────┐      |
01 |      │first matched line↵second matched line                                                                    │      |
02 |      └──────────────────────────────────────────────────────────────────────────────────────────────────────────┘      |
03 |      ┌─Replace text─────────────────────────────────────────────────────────────────────────────────────────────┐      |
04 |      │joined                                                                                                    │      |
05 |      └──────────────────────────────────────────────────────────────────────────────────────────────────────────┘      |
06 |                                                                                                                        |
07 |      Results: 1 [Search complete]                                                            [Time taken: TIME]      |
08 |                                                                                                                        |
09 |      [x] fixture.txt:2                                                                                        (1)      |
10 |                                                                                                                        |
11 |                                                                                                                        |
12 |                                                                                                                        |
13 |                                                                                                                        |
14 |                                                                                                                        |
15 |        before context                                                                                                  |
16 |      - first matched line                                                                                              |
17 |      - second matched line                                                                                             |
18 |      + joined                                                                                                          |
19 |        after context                                                                                                   |
20 |                                                                                                                        |
21 |                                                                                                                        |
22 |                                                                                                                        |
23 |                                                                                                                        |
24 |                                                                                                                        |
25 |                                                                                                                        |
26 |                                                                                                                        |
27 |                                                                                                                        |
28 |                                                                                                                        |
29 |                                                                                                                        |
30 |                                                                                                                        |
31 |                                                                                                                        |
32 |                                                                                                                        |
33 |                                                                                                                        |
34 |                                                                                                                        |
35 |                                                                                                                        |
36 |                                                                                                                        |
37 |                                                                                                                        |
38 |                                                                                                                        |
39 |           <space> toggle / <esc> back to search fields / <enter> replace selected / <C-h> help / <C-c> quit            |
tags:
00: 6-114 text
01: 6-45 text | 113-114 text
02: 6-114 text
03: 6-114 text
04: 6-13 text | 113-114 text
05: 6-114 text
07: 6-16 text | 16-34 diff-added | 94-114 diff-added
09: 6-114 selection
15: 6-22 text
16: 6-8 diff-removed | 8-26 diff-removed-emph
17: 6-8 diff-removed | 8-27 diff-removed-emph
18: 6-8 diff-added | 8-14 diff-added-emph
19: 6-21 text
39: 11-108 info
